--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,9 @@
-
+asgiref==3.6.0
+dj-database-url==2.0.0
+Django==4.2.1
+gunicorn==20.1.0
+pytz==2023.3
+sqlparse==0.4.4
+typing_extensions==4.6.1
+whitenoise==6.4.0
+psycopg2==2.6.2
